Update item versioning and status GSI query